--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 Tab Switcher plugin for GEdit 3
 
-Allows switching between tabs with CTRL+Tab. Install into ~/.local/share/gedit/plugins or /usr/lib/gedit/plugins directory
+Switch between tabs using Ctrl + Tab / Ctrl + PgDn and Ctrl + Shift + Tab / Ctrl + PgUp. Install into ~/.local/share/gedit/plugins or /usr/lib/gedit/plugins directory
